@@ -1,0 +1,102 @@
+.\" RCSid $Id: ltview.1,v 1.1 2014/04/15 22:36:25 greg Exp $
+.TH "LTVIEW" "1" "08/04/14" "RADIANCE" ""
+.SH "NAME"
+ltview \- view photometry of a light source
+.SH "SYNOPSIS"
+.B ltview
+[
+.B \-i
+][
+.B "\-b boxsize"
+][
+.B "\-o output device"
+]
+input
+.SH "DESCRIPTION"
+.I ltview
+renders a Radiance luminiare or IES photometry interactively using
+.I rad(1)
+.  This program is merely a shell script that calls
+.I rad(1)
+to make an octree and view the scene interactively.
+.PP 
+.I ltview
+accepts exactly one Radiance object or IES photometry
+file as input.  No input is taken from STDIN.  The
+.I \-i
+option tells it that the file name given is 
+an IES photometry file rather then a Radiance description of a 
+luminiare.  In this case, Radiance's
+.I ies2rad(1)
+is called with its default settings to convert the IES file into a 
+Radiance object.
+.PP 
+Unlike
+.I objpict(1)
+or
+.I objview(1)
+, no additional light sources are added to the scene, since it is
+assumed that the object is a luminaire.
+.PP 
+.I ltview
+relies on Radiance's
+.I rad(1)
+command to compile an octree using 
+.I oconv(1)
+and to call
+.I rvu(1)
+to display an interactive preview of the luminaire.
+The default behaviour for
+.I ltview
+is to scale the luminaire or output from 
+.I ies2rad(1)
+so that the largest dimension of the fitting is unity, centered at the origin.
+This scaled representation of the original fitting is then placed inside a 
+square box 10 units in length.  The \-y face of the box is left open so that 
+the camera can look inside, facing +y.
+If it is desirable to keep the original luminaire in both its original size,
+and its original location, the
+.I "\-r roomsize"
+option may be used to fix the room size to a certain
+.I roomsize.
+In this case, the size and location of the fitting is not adjusted, and
+it is up to the user to decide on appropriate room dimensions.  Note that
+when
+.I \-r
+and
+.I \-i
+are combined, then the dimensions of the luminaire and intesity of its 
+output are determined by
+.I ies2rad(1)'s
+default settings.  If this is not acceptable, then it is best to run
+.I ies2rad(1)
+manually, and to feed
+.I ltview
+the hand\-crafted fitting, rather than the IES photometry.
+.PP 
+The default
+.I rvu(1)
+output device is
+.I x11
+on all platforms except for Windows, where it is set to
+.I qt.
+This may be overwritten with the
+.I "\-o output"
+option.
+
+.SH "EXAMPLES"
+To query available output devices
+.IP "" .2i
+rvu \-devices
+.PP 
+To visualise an IES file with the qt driver
+.IP "" .2i
+ltview \-o qt ABC123.ies
+.PP 
+To look at a typical fluorescent fitting that is modelled in millimeters
+.IP "" .2i
+ltview \-r 5000 XYZ_batten.rad
+.SH "AUTHOR"
+Axel Jacobs
+.SH "SEE ALSO"
+ltpict(1), ies2rad(1), oconv(1), rad(1), rvu(1)
